chore: sync all core systems, tests and simulation modules